Fixed Hamburger menu, using JS. Alignment of Button Fixed. Desktop Design completed.

--- a/css/styles.css
+++ b/css/styles.css
@@ -19,105 +19,54 @@ body {
 }
 
 /*^^^^^^^^^^^ nav bar^^^^^^^^^^^^^^^*/
-.container {
+/*^^^Desktop Nav bar Only Layout^^^*/
+.logo img {
+  width: 192px;
+}
+
+nav {
+  background-color: transparent;
+  color: white;
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  max-width: 1110px;
-  margin: 0 auto;
-  padding-top: 68px;
+  margin: 0 165px;
+  padding-top: 64px;
 }
 
-ul {
+nav .mainMenu {
+  display: flex;
   list-style-type: none;
-  padding: 0;
+  width: 380px;
+  justify-content: space-between;
+  align-items: center;
 }
 
-li {
+nav .mainMenu li a {
   display: inline-block;
-  padding-left: 33px;
-}
-
-li a {
-  color: #fff;
+  font-family: "Alata", sans-serif;
   text-decoration: none;
-  font-family: "Alata", san-serif;
+  color: #fff;
+  font-size: 15px;
+  line-height: 25px;
+  font-weight: normal;
 }
 
-li:hover a {
+nav .mainMenu li a:hover {
   text-decoration: underline;
 }
 
-/* Mobile Toggle */
-
-.nav-toggle {
-  /*! display: none; */
-  /*! position: absolute; */
-  /*! right: 1rem; */
-  /*! top: 1.5rem; */
+nav .openMenu {
   cursor: pointer;
-}
-
-.nav-toggle img {
-  width: 24px;
-  transition: 300ms all ease;
-}
-
-.nav-toggle:hover img {
-  opacity: 0.6;
-}
-
-.open {
-  height: 100vh;
-}
-
-.hidden {
+  font-size: 28px;
+  line-height: 25px;
   display: none;
 }
 
-/* Mobile */
-@media all and (max-width: 720px) {
-  .container {
-    flex-direction: column;
-    background-color: #000;
-    height: 650px;
-    justify-content: space-between;
-    padding-top: 40px;
-    align-content: center;
-  }
-
-  nav {
-    width: 100%;
-    overflow: hidden;
-    transition: 250ms height ease-in-out;
-  }
-
-  .mobile-align {
-    display: flex;
-    width: 86.7%;
-    justify-content: space-between;
-  }
-
-  li {
-    display: block;
-    padding-bottom: 24px;
-  }
-
-  li a {
-    font-size: 24px;
-    text-transform: uppercase;
-    line-height: 25px;
-  }
-
-  .nav-toggle {
-    display: block;
-    width: 24px;
-    height: 16px;
-  }
-
-  ul {
-    margin-bottom: 223px;
-  }
+nav .mainMenu .closeMenu {
+  cursor: pointer;
+  font-size: 28px;
+  line-height: 25px;
+  display: none;
 }
 
 /*^^^^^^^^^^^ hero section ^^^^^^^^^*/
@@ -377,27 +326,79 @@ h1 {
 }
 
 /* =================== Media Queries ========================*/
+
+/*Mobile layout CSS Nav bar Only*/
+@media (max-width: 786px) {
+  nav {
+    margin: 0 24px;
+    padding-top: 40px;
+  }
+
+  .logo img {
+    width: 144px;
+    display: block;
+    position: sticky;
+    z-index: 100;
+  }
+
+  nav .mainMenu {
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    width: 100%;
+    justify-content: flex-start;
+    flex-direction: column;
+    align-items: flex-start;
+    background-color: black;
+    transition: top 1s ease;
+    display: none;
+  }
+
+  nav ul {
+    padding-top: 223px;
+    padding-left: 24px;
+  }
+
+  nav .mainMenu li a {
+    font-family: "Josefin Sans", sans-serif;
+    text-transform: uppercase;
+    font-size: 24px;
+    line-height: 25px;
+    font-weight: 300;
+    margin-bottom: 24px;
+  }
+
+  nav .mainMenu .closeMenu {
+    display: block;
+    position: absolute;
+    top: 40px;
+    right: 24px;
+    font-size: 30px;
+  }
+
+  nav .openMenu {
+    display: block;
+  }
+}
+
 /*Desktop layout CSS*/
 @media only screen and (min-width: 768px) {
 
   /*^^^^^^^^^^^ Header/Hero Section ^^^^^^^^^^^^^^^*/
   #header {
-    background-image: url(../images/desktop/image-hero.jpg);
-  }
-
-  /*^^^^^^^^^^^ nav bar^^^^^^^^^^^^^^^*/
-  .navbar {
-    width: 1110px;
-  }
-
-  .navbar a img {
-    width: 192px;
+    background-image: linear-gradient(270deg,
+        rgba(0, 0, 0, 0.0001) 0%,
+        rgba(0, 0, 0, 0.601863) 100%),
+      url(../images/desktop/image-hero.jpg);
   }
 
   /*^^^^^Hero Section ^^^^^^^*/
   #hero-section {
     margin: 123px 165px;
     width: 45%;
+    margin-bottom: 146px;
   }
 
   h1 {
@@ -459,7 +460,7 @@ h1 {
     text-align: left;
     font-size: 48px;
     line-height: 48px;
-    margin-bottom: 0;
+    margin-bottom: 84px;
     order: 1;
     width: 50%;
   }
@@ -550,8 +551,10 @@ h1 {
   }
 
   #gallery-section .button {
+    position: absolute;
     align-self: flex-end;
     order: 1;
+    
   }
 
   /*^^^^^^^^^^^ Footer Section ^^^^^^^^^^^^^^^*/
